--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#9098B1</color>
+    <color name="red">#fb7181</color>
+    
+    <color name="light">#EBF0FF</color>
+    <color name="dark">#223263</color>
+
+    <color name="text_heading">@color/dark</color>
+    <color name="text_body">@color/gray</color>
+    <color name="edit_icon">@color/gray</color>
+    
 </resources>
