--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,55 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+<resources>
+   
     <style name="Base.Theme.AeonTest" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
     <style name="Theme.AeonTest" parent="Base.Theme.AeonTest" />
+
+    <style name="TestApp.Text.Heading.H4" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/text_heading</item>
+    </style>
+
+    <style name="TestApp.Text.Body.NormalRegular" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/text_body</item>
+    </style>
+    
+    <style name="TestApp.CursorColor" parent="">
+        <item name="colorControlActivated">@color/gray</item>
+    </style>
+    
+    <style name="TestApp.Edit" parent="Widget.AppCompat.EditText">
+        <item name="android:paddingTop">12dp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:drawablePadding">12dp</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textColorHint">@color/gray</item>
+        <item name="android:theme">@style/TestApp.CursorColor</item>
+        <item name="android:drawableTint">@color/edit_error_color_selector</item>
+    </style>
+    
+    <style name="TestApp.Edit.Password" parent="TestApp.Edit">
+        <item name="android:drawableStart">@drawable/ic_lock_24</item>
+        <item name="android:inputType">textPassword</item>
+    </style>
+    
+    <style name="TestApp.Edit.InputLayout" parent="Widget.Material3.TextInputLayout.FilledBox">
+        <item name="boxStrokeWidth">0dp</item>
+        <item name="boxStrokeWidthFocused">0dp</item>
+        <item name="hintEnabled">false</item>
+    </style>
+
+    <style name="TestApp.Edit.PasswordInputLayout" parent="TestApp.Edit.InputLayout">
+        <item name="passwordToggleTint">@color/gray</item>
+        <item name="passwordToggleEnabled">true</item>
+    </style>
+
+
+    
 </resources>
