--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,12 @@
         <item name="android:textColor">@color/text_heading</item>
     </style>
 
+    <style name="TestApp.Text.Heading.H6" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/text_heading</item>
+    </style>
+
     <style name="TestApp.Text.Body.NormalRegular" parent="TextAppearance.AppCompat">
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">normal</item>
