--- a/app/src/main/res/navigation/auth.xml
+++ b/app/src/main/res/navigation/auth.xml
@@ -9,5 +9,10 @@
         android:id="@+id/loginFragment"
         android:name="ru.aeon.testapp.presentation.ui.auth.LoginFragment"
         android:label="LoginFragment"
-        tools:layout="@layout/fragment_login" />
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_payments"
+            app:destination="@id/payments" />
+    </fragment>
+    <include app:graph="@navigation/payments" />
 </navigation>
