--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,7 +34,7 @@
         <item name="android:paddingEnd">16dp</item>
         <item name="android:drawablePadding">12dp</item>
         <item name="android:minHeight">48dp</item>
-        <item name="android:textColor">@color/gray</item>
+        <item name="android:textColor">@color/edit_text</item>
         <item name="android:textColorHint">@color/gray</item>
         <item name="android:theme">@style/TestApp.CursorColor</item>
         <item name="android:drawableTint">@color/edit_error_color_selector</item>
