--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,6 +6,12 @@
 
     <style name="Theme.AeonTest" parent="Base.Theme.AeonTest" />
 
+    <style name="TestApp.Text.Body.Title" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/text_title</item>
+    </style>
+
     <style name="TestApp.Text.Heading.H4" parent="TextAppearance.AppCompat">
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
@@ -56,6 +62,13 @@
         <item name="passwordToggleEnabled">true</item>
     </style>
 
-
+    <style name="TestApp.Button.Borderless" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:minWidth">24dp</item>
+        <item name="android:minHeight">24dp</item>
+        <item name="android:padding">8dp</item>
+        <item name="tint">@color/image_button_tint</item>
+        <item name="android:background">?android:attr/selectableItemBackgroundBorderless</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
     
 </resources>
