--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,13 @@
    
     <style name="Base.Theme.AeonTest" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">@bool/light</item>
+        <item name="android:windowLightNavigationBar">@bool/light</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <style name="Theme.AeonTest" parent="Base.Theme.AeonTest" />
