--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,12 +20,13 @@
             android:id="@+id/logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher_foreground"
+            android:src="@drawable/logo"
             app:layout_constraintBottom_toTopOf="@id/title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
+            app:tint="@color/logo_tint"
             tools:ignore="ContentDescription" />
 
         <TextView
@@ -119,22 +120,22 @@
             app:layout_constraintTop_toBottomOf="@id/password_layout"
             tools:text="Неверное имя пользователя или пароль"
             tools:visibility="visible" />
-        
+
         <ru.aeon.testapp.presentation.ui.widget.ProgressButtonView
             android:id="@+id/login_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/auth_login_button"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:text="@string/auth_login_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/error_message"
             app:layout_constraintWidth_max="480dp"
-            app:layout_goneMarginTop="16dp"/>
+            app:layout_goneMarginTop="16dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    
+
 </androidx.core.widget.NestedScrollView>
