--- a/app/src/main/res/layout/payment_recycler_item.xml
+++ b/app/src/main/res/layout/payment_recycler_item.xml
@@ -56,8 +56,9 @@
         android:id="@+id/payment_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minWidth="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:text="2131" />
+        tools:text="22.05.2023 08:22" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
