--- a/app/src/main/res/drawable/logo.xml
+++ b/app/src/main/res/drawable/logo.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="96dp"
     android:height="96dp"
-    android:tint="#FFFFFF"
+    android:tint="@color/logo_tint"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
